# rackiq

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  barges.py  behavioral.py  bookload.py  calendar_days.py  capabilities.py  cli.py  config.py  credit.py  credit_config.py  crosswalk.py  data_health.py  db.py  dealbook.py  demand.py  forecasting.py  generator.py  hedging.py  hygiene.py  ingest.py  main.py  margin.py  margin_config.py  models.py  opportunity.py  playbook.py  pricegrid.py  pricing.py  pricing_config.py  profiling.py  reconciliation.py  reconciliation_config.py  regime.py  regime_config.py  schema.py  scoring.py  scoring_config.py  validation.py  variability.py  weather.py  (+2 more)
backend/app/api/: calendar.py  credit.py  daily.py  deals.py  demand.py  hedging.py  margin.py  opportunity.py  position.py  pricing.py  profile.py  queries.py  reconciliation.py  routes.py  scores.py  studio.py  variability.py  weather.py
backend/tests/: conftest.py  test_behavioral.py  test_bol_ingest.py  test_bol_lifts_import.py  test_calendar.py  test_credit.py  test_data_studio_robustness.py  test_dealbook.py  test_demand.py  test_early_feeds.py  test_forecasting.py  test_hedging.py  test_hygiene_studio.py  test_margin.py  test_name_map.py  test_opportunity.py  test_position.py  test_pricegrid.py  test_pricing.py  test_product_map.py  test_reconciliation.py  test_regime.py  test_scoring.py  test_studio_api.py  test_variability.py  test_weather_hdd.py  test_weather_model.py
docs/: playbook.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
samples/: bol_wide_sample.csv  bol_wide_sample.xlsx  inventory_snapshots_sample.csv  invoices_sample.csv  lifts_barrels.csv  lifts_dirty.csv  lifts_sample.csv  lifts_sample.xlsx  market_prices_sample.csv  quotes_sample.csv  receipts_sample.csv
(+76 files in other folders)
