[project]
name = "rackiq-backend"
version = "0.1.0"
description = "RackIQ — customer demand & margin intelligence for wholesale fuel terminals"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26,<2.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "statsmodels>=0.14.6",
    "holidays>=0.50",
]

[project.scripts]
rackiq-generate = "app.cli:generate_main"
rackiq-serve = "app.cli:serve_main"
rackiq-info = "app.cli:info_main"
rackiq-export-samples = "app.cli:export_samples_main"
rackiq-export-playbook = "app.cli:export_playbook_main"
rackiq-load-realbook = "app.cli:load_realbook_main"
rackiq-variability = "app.cli:variability_main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
